--- a/my-blog/extensions/users-permissions/models/User.settings.json
+++ b/my-blog/extensions/users-permissions/models/User.settings.json
@@ -62,6 +62,18 @@
     "articles": {
       "via": "users_permissions_user",
       "collection": "article"
+    },
+    "icon": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
