--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vitejs/plugin-vue": "^1.2.4",
     "@vue/cli-plugin-router": "^4.5.13",
     "@vue/compiler-sfc": "^3.0.5",
-    "vite": "^2.4.0"
+    "vite": "^2.4.0",
+    "vite-svg-loader": "^2.0.2"
   }
 }
